Fix button styles and headline alignment on new WordPress markup see #123

--- a/src/scss/block-editor.scss
+++ b/src/scss/block-editor.scss
@@ -86,6 +86,12 @@
     [class*="wp-block"] {
         clear: none;
     }
+
+    .wp-block-buttons {
+        .block-list-appender {
+            margin-bottom: 0;
+        }
+    }
 }
 
 /* Post Title Block */
