--- a/src/scss/blocks/core/button/_common.scss
+++ b/src/scss/blocks/core/button/_common.scss
@@ -34,24 +34,22 @@ $enable-button-block-styles:            true !default;
     }
 
     .wp-block-buttons[class][class] {
-        margin-top: 0;
+        margin-top: var(--element-spacing);
+
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
 
         .wp-block,
         .wp-block-button {
             margin: 0;
             margin-right: var(--element-spacing);
-            margin-top: var(--element-spacing);
         }
 
         .block-editor-block-list__layout {
             display: flex;
             align-items: center;
             flex-wrap: wrap;
-
-            > * {
-                margin-left: 0;
-                margin-right: 0;
-            }
         }
 
         &.aligncenter {
