--- a/src/scss/elements/_headings.scss
+++ b/src/scss/elements/_headings.scss
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, h5, h6 {
-  margin: 0;
+  margin-bottom: 0;
 }
 
 h1, .h1 {
