--- a/style-rtl.css
+++ b/style-rtl.css
@@ -752,7 +752,7 @@ label {
     margin-bottom: var(--theme-input-vertical-spacing); }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0; }
+  margin-bottom: 0; }
 
 h1, .h1 {
   --font-size: var(--theme-heading-1-font-size);
